# mailboxhub

./: .gitignore  LICENSE  README.md  README_ZH.md  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  error.rs  lib.rs
src-tauri/src/commands/: accounts.rs  emails.rs  mod.rs  settings.rs
src-tauri/src/db/: accounts.rs  emails.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/mail/: imap_client.rs  import.rs  mod.rs  oauth.rs  parser.rs  poller.rs
src-tauri/src/models/: account.rs  email.rs  events.rs  mod.rs  settings.rs
src/components/: AccountImportDropzone.test.tsx  AccountImportDropzone.tsx  AccountList.test.tsx  AccountList.tsx  AppShell.tsx  CodePill.tsx  EmailList.tsx  EmailPreviewCard.tsx  EmptyState.tsx  GlassPanel.tsx  TitleBar.test.tsx  TitleBar.tsx  UnreadBadge.tsx
src/lib/: format.test.ts  format.ts  tauri.ts
src/pages/: EmailDetailPage.tsx  LoginPage.tsx  MailboxPage.tsx  SettingsPage.tsx
src/store/: mailStore.test.ts  mailStore.ts  settingsStore.ts
src/styles/: index.css
src/types/: account.ts  email.ts  settings.ts
